--- a/components/dada-lsp-server/Cargo.toml
+++ b/components/dada-lsp-server/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 crossbeam-channel = "0.5.13"
 dada-compiler = { version = "0.1.0", path = "../dada-compiler" }
+dada-ir-ast = { version = "0.1.0", path = "../dada-ir-ast" }
 dada-lang = { version = "0.1.0", path = "../dada-lang" }
 dada-util = { version = "0.1.0", path = "../dada-util" }
 futures = "0.3.31"
