--- a/components/dada-parser/Cargo.toml
+++ b/components/dada-parser/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 [dependencies]
 dada-ir-ast = { version = "0.1.0", path = "../dada-ir-ast" }
 dada-util = { version = "0.1.0", path = "../dada-util" }
-salsa = { git = "https://github.com/salsa-rs/salsa.git" }
+salsa = { workspace = true }
