--- a/components/dada-compiler/Cargo.toml
+++ b/components/dada-compiler/Cargo.toml
@@ -8,7 +8,7 @@ dada-check = { version = "0.1.0", path = "../dada-check" }
 dada-ir-ast = { version = "0.1.0", path = "../dada-ir-ast" }
 dada-parser = { version = "0.1.0", path = "../dada-parser" }
 dada-util = { version = "0.1.0", path = "../dada-util" }
-salsa = { git = "https://github.com/salsa-rs/salsa.git" }
+salsa = { workspace = true }
 rust-embed = "8.5.0"
-url = "2.5.3"
 extension-trait = "1.0.2"
+url = { workspace = true }
