--- a/components/dada-ir-ast/Cargo.toml
+++ b/components/dada-ir-ast/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-annotate-snippets = "0.11.4"
+annotate-snippets = { workspace = true }
 dada-util = { version = "0.1.0", path = "../dada-util" }
-salsa = { git = "https://github.com/salsa-rs/salsa.git" }
-url = "2.5.3"
+salsa = { workspace = true }
+url = { workspace = true }
