--- a/components/dada-ir-sym/Cargo.toml
+++ b/components/dada-ir-sym/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 dada-ir-ast = { version = "0.1.0", path = "../dada-ir-ast" }
 dada-parser = { version = "0.1.0", path = "../dada-parser" }
 dada-util = { version = "0.1.0", path = "../dada-util" }
-salsa = { git = "https://github.com/salsa-rs/salsa.git" }
+salsa = { workspace = true }
