--- a/components/dada-lsp-server/Cargo.toml
+++ b/components/dada-lsp-server/Cargo.toml
@@ -12,7 +12,7 @@ dada-util = { version = "0.1.0", path = "../dada-util" }
 futures = "0.3.31"
 lsp-server = "0.7.7"
 lsp-types = "0.97.0"
-salsa = { git = "https://github.com/salsa-rs/salsa.git" }
+salsa = { workspace = true }
 serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.132"
 url = "2.5.3"
