--- a/components/dada-object-check/Cargo.toml
+++ b/components/dada-object-check/Cargo.toml
@@ -9,5 +9,6 @@ dada-ir-sym = { version = "0.1.0", path = "../dada-ir-sym" }
 dada-parser = { version = "0.1.0", path = "../dada-parser" }
 dada-util = { version = "0.1.0", path = "../dada-util" }
 futures = "0.3.31"
-salsa = { git = "https://github.com/salsa-rs/salsa.git" }
+ordered-float = "4.5.0"
+salsa = { workspace = true }
 typed-arena = "2.0.2"
