--- a/components/dada-util/Cargo.toml
+++ b/components/dada-util/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = { workspace = true }
 dada-util-procmacro = { version = "0.1.0", path = "../dada-util-procmacro" }
+futures = "0.3.31"
 fxhash = "0.2.1"
 imstr = "0.2.0"
 indexmap = "2.6.0"
