--- a/components/dada-util/Cargo.toml
+++ b/components/dada-util/Cargo.toml
@@ -6,8 +6,12 @@ edition = "2021"
 [dependencies]
 anyhow = { workspace = true }
 dada-util-procmacro = { version = "0.1.0", path = "../dada-util-procmacro" }
+erased-serde = "0.4.5"
 futures = "0.3.31"
 fxhash = "0.2.1"
 imstr = "0.2.0"
 indexmap = "2.6.0"
+lazy_static = "1.5.0"
 salsa = { workspace = true }
+serde = { version = "1.0.216", features = ["derive"] }
+serde_json = "1.0.133"
