--- a/components/dada-codegen/Cargo.toml
+++ b/components/dada-codegen/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "dada-codegen"
-version = "0.1.0"
-edition = "2024"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
 dada-ir-sym = { version = "0.1.0", path = "../dada-ir-sym" }
