--- a/components/dada-compiler/Cargo.toml
+++ b/components/dada-compiler/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "dada-compiler"
-version = "0.1.0"
-edition = "2024"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
 dada-check = { version = "0.1.0", path = "../dada-check" }
