--- a/components/dada-lang/Cargo.toml
+++ b/components/dada-lang/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "dada-lang"
-version = "0.1.0"
-edition = "2024"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
 annotate-snippets = { workspace = true }
@@ -15,7 +15,6 @@ lazy_static = "1.5.0"
 prettydiff = "0.7.0"
 rayon = "1.10.0"
 regex = "1.10.6"
-run = "0.1.0"
 salsa = { workspace = true }
 structopt = "0.3.26" # derive doesn't work without this
 thiserror = "1.0.63"
