--- a/components/dada-lsp-server/Cargo.toml
+++ b/components/dada-lsp-server/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "dada-lsp-server"
-version = "0.1.0"
-edition = "2024"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
 crossbeam-channel = "0.5.13"
