--- a/components/dada-util-procmacro/Cargo.toml
+++ b/components/dada-util-procmacro/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "dada-util-procmacro"
-version = "0.1.0"
-edition = "2024"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
 proc-macro2 = "1.0"
 quote = "1.0"
-syn = { version = "1.0", features = ["full"] }
+syn = { version = "1.0", features = ["full", "visit", "visit-mut"] }
 synstructure = "0.13.1"
 
 [lib]
