--- a/components/dada-util/Cargo.toml
+++ b/components/dada-util/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "dada-util"
-version = "0.1.0"
-edition = "2024"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
 anyhow = { workspace = true }
@@ -15,3 +15,4 @@ lazy_static = "1.5.0"
 salsa = { workspace = true }
 serde = { version = "1.0.216", features = ["derive"] }
 serde_json = "1.0.133"
+
