--- a/components/dada-ir-sym/Cargo.toml
+++ b/components/dada-ir-sym/Cargo.toml
@@ -11,3 +11,5 @@ either = "1.13.0"
 futures = "0.3.31"
 ordered-float = "4.5.0"
 salsa = { workspace = true }
+serde = "1.0.219"
+serde_json = "1.0.140"
