--- a/components/dada-ir-sym/Cargo.toml
+++ b/components/dada-ir-sym/Cargo.toml
@@ -9,7 +9,9 @@ dada-parser = { version = "0.1.0", path = "../dada-parser" }
 dada-util = { version = "0.1.0", path = "../dada-util" }
 either = "1.13.0"
 futures = "0.3.31"
+handlebars = { version = "6.3.1", features = ["rust-embed"] }
 ordered-float = "4.5.0"
+rust-embed = "8.6.0"
 salsa = { workspace = true }
 serde = "1.0.219"
 serde_json = "1.0.140"
