--- a/components/dada-lang/Cargo.toml
+++ b/components/dada-lang/Cargo.toml
@@ -7,6 +7,7 @@ edition.workspace = true
 annotate-snippets = { workspace = true }
 dada-check = { version = "0.1.0", path = "../dada-check" }
 dada-compiler = { version = "0.1.0", path = "../dada-compiler" }
+dada-debug = { version = "0.1.0", path = "../dada-debug" }
 dada-ir-ast = { version = "0.1.0", path = "../dada-ir-ast" }
 dada-parser = { version = "0.1.0", path = "../dada-parser" }
 dada-util = { version = "0.1.0", path = "../dada-util" }
