--- a/components/dada-debug/Cargo.toml
+++ b/components/dada-debug/Cargo.toml
@@ -7,12 +7,14 @@ edition.workspace = true
 [dependencies]
 anyhow.workspace = true
 axum = "0.8.1"
+dada-ir-ast = { version = "0.1.0", path = "../dada-ir-ast" }
 handlebars = { version = "6.3.1", features = ["rust-embed"] }
 notify = "8.0.0"
 rust-embed = "8.6.0"
-serde = "1.0.219"
+serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 structopt = "0.3.26"
 tokio = { version = "1.44.0", features = ["full"] }
 tracing-subscriber = "0.3.19"
+url.workspace = true
 walkdir = "2.5.0"
