--- a/components/dada-ir-ast/Cargo.toml
+++ b/components/dada-ir-ast/Cargo.toml
@@ -7,4 +7,5 @@ edition.workspace = true
 annotate-snippets = { workspace = true }
 dada-util = { version = "0.1.0", path = "../dada-util" }
 salsa = { workspace = true }
+serde_json = "1.0.140"
 url = { workspace = true }
