--- a/components/dada-ir-sym/Cargo.toml
+++ b/components/dada-ir-sym/Cargo.toml
@@ -8,8 +8,9 @@ dada-ir-ast = { version = "0.1.0", path = "../dada-ir-ast" }
 dada-parser = { version = "0.1.0", path = "../dada-parser" }
 dada-util = { version = "0.1.0", path = "../dada-util" }
 either = "1.13.0"
+erased-serde = "0.4.6"
 futures = "0.3.31"
 ordered-float = "4.5.0"
 salsa = { workspace = true }
-serde = "1.0.219"
+serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
