--- a/components/dada-debug/Cargo.toml
+++ b/components/dada-debug/Cargo.toml
@@ -7,9 +7,12 @@ edition.workspace = true
 [dependencies]
 anyhow.workspace = true
 axum = "0.8.1"
+camino = "1.1.9"
 dada-ir-ast = { version = "0.1.0", path = "../dada-ir-ast" }
 handlebars = { version = "6.3.1", features = ["rust-embed"] }
+html-escape = "0.2.13"
 notify = "8.0.0"
+regex = "1.11.1"
 rust-embed = "8.6.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
