--- a/components/dada-compiler/Cargo.toml
+++ b/components/dada-compiler/Cargo.toml
@@ -14,3 +14,4 @@ extension-trait = "1.0.2"
 url = { workspace = true }
 dada-codegen = { version = "0.1.0", path = "../dada-codegen" }
 dada-ir-sym = { version = "0.1.0", path = "../dada-ir-sym" }
+dada-probe = { version = "0.1.0", path = "../dada-probe" }
