--- a/components/vscode/.vscodeignore
+++ b/components/vscode/.vscodeignore
@@ -1,11 +1,11 @@
 .vscode/**
 .vscode-test/**
-src/**
+.github/**
+scripts/**
 .gitignore
 .yarnrc
 vsc-extension-quickstart.md
 **/tsconfig.json
-**/eslint.config.mjs
+**/.eslintrc.json
 **/*.map
-**/*.ts
-**/.vscode-test.*
+node_modules/**
